<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pt.sotubo.shopfloortracker.MainActivity">

    <group >
        <item
            android:id="@+id/action_edit_job"
            android:orderInCategory="100"
            android:title="@string/action_edit_job"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_new_job"
            android:orderInCategory="101"
            android:title="@string/action_new_job"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_delete_job"
            android:orderInCategory="102"
            android:title="@string/action_delete_job"
            app:showAsAction="never" />
    </group>

    <group>
        <item
            android:id="@+id/action_save_settings"
            android:orderInCategory="200"
            android:title="@string/guardar_separadores"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_restore_settings"
            android:orderInCategory="201"
            android:title="@string/recuperar_separadores"
            app:showAsAction="never" />

    </group>
    <item
        android:id="@+id/action_resync"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="Resincronizar"
        app:showAsAction="ifRoom" />
</menu>
